Add profile update logic
